# watch-bot

./: .env.example  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/watchbot/: __init__.py  agent.py  billref.py  cli.py  config.py  db.py  embeddings.py  ingest.py  search.py
tests/: conftest.py  test_agent.py  test_billref.py  test_ingest.py  test_search.py
