[project]
name = "watchbot"
version = "0.1.0"
description = "A government-watchdog chatbot: semantic search over current-Congress bills, grounded vote data via the GovQL MCP server."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic[mcp]>=0.116.0",
    "openai>=1.60.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.scripts]
watchbot = "watchbot.cli:main"
watchbot-ingest = "watchbot.ingest:main"
watchbot-setup-db = "watchbot.db:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/watchbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
